update: 注入插件时跳过内部类/匿名类等